--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -54,10 +54,20 @@ body {
 .wg-btn:hover,
 .wg-btn:focus {
 	color: white;
-	padding: .5rem 2rem;
 	background-color: var(--p-color-hover);
 	box-shadow: 0 3px 6px 2px rgba(0,0,0,.3);
 }
+
+.wg-btn.is-scaling:hover,
+.wg-btn.is-scaling:focus {
+	color: white;
+	background-color: var(--p-color-hover);
+	box-shadow: 0 3px 6px 2px rgba(0,0,0,.3);
+	padding: .5rem 2rem;
+}
+
+
+	
 
 .container {
 	margin: 0 auto;
@@ -90,9 +100,43 @@ body {
 	background-color: #eee;
 	margin: 0 .5rem 0 -1rem;
 }
+
+.wg-bottom-bar {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.notification {
+	text-align: left;
+	padding: .5rem 1.5rem;
+	background-color: #eee;
+	border-radius: 8px;
+	box-shadow: 0 0 7px rgba(0,0,9,0.3);
+	transition: all .3s ease-out;
+}
+
+.notification.is-danger {
+	color: white;
+	background-color: crimson;
+}
+.wg-bottom-bar .notification {
+	flex: 1 0 250px;
+	max-width: 400px;
+}
+
 .text-center {
 	text-align: center;
 }
 .text-right {
 	text-align: right;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
 }
